# autosave-me

./: .gitignore  README.md  changelog.md  requirements.txt  setup.cfg
src/autosave/: __main__.py  app.py  parser.py  timer.py
tests/: test_argparse.py  test_timer.py
