[metadata]
name = autosave-me
description = Simple auto-save script with a timer. Never get surprised by crashes again!
version = 0.6.0
author = FancySnacks
author_email = adrian.urbaniak1336@gmail.com
license = MIT
readme = README
license_files = LICENSE
platforms = unix, cygwin, win32, osx, linux
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.11

[options]
packages =
    autosave
python_requires = >=3.11
install_requires =
    keyboard>=0.13.5
package_dir =
    = src
zip_safe = no

[options.entry_points]
console_scripts =
    autosave = autosave.__main__:main

[build-system]
requires = ["setuptools~=62.0", "wheel"]
build-backend = "setuptools.build_meta"

[options.extras_require]
testing =
    pytest>=7.2.0

[coverage:run]
source = autosave
omit = tests/*

[coverage:report]
show_missing = True

[tool:pytest]
addopts =
    --cov=autosave
    --cov-report=term-missing